syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Sales.TodayReferredCustomer.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "TodayReferredCustomerProto";
option objc_class_prefix = "HLW";


package Sales;


service TodayReferredCustomer{
	rpc GetTodayReferredCustomer(TodayReferredCustomerRequest) returns(TodayReferredCustomerReplyList);
}

message TodayReferredCustomerRequest{

string SellerID = 1;
string DirectionID = 2;

}

message TodayReferredCustomerReply{

int32	SellerID = 1;
int32	CustomerID = 2;
int32	ReferenceType = 3;
int32	CreditsAdded = 4;
double	InvoiceRemainingPrice = 5;

}

message TodayReferredCustomerReplyList{
	repeated TodayReferredCustomerReply TodayReferredCustomers = 1;
}